--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>SpringCloud-Ribbon-consumer</module>
         <module>SpringCloud-Zuul-gateway-7001</module>
         <module>SpringCloud-Zuul-gateway-filter-7001</module>
+        <module>SpringCloud-Config-server-5001</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
