--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>SpringCloud-Zuul-gateway-7001</module>
         <module>SpringCloud-Zuul-gateway-filter-7001</module>
         <module>SpringCloud-Config-server-5001</module>
+        <module>SpringCloud-Config-Client-8080</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
