--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <module>SpringCloud-Zuul-gateway-filter-7001</module>
         <module>SpringCloud-Config-server-5001</module>
         <module>SpringCloud-Config-Client-8080</module>
+        <module>SpringCloud-Eureka-Config-6001</module>
+        <module>SpringCloud-Config-provider</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
