--- a/SpringCloud-Bus-provider-8001/pom.xml
+++ b/SpringCloud-Bus-provider-8001/pom.xml
@@ -9,10 +9,19 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>SpringCloud-Config-provider-8001</artifactId>
+    <artifactId>SpringCloud-Bus-provider-8001</artifactId>
 
     <dependencies>
-
+        <!--Bus 与 rabbitMQ依赖-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
+        <!--监听器-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         <!-- Spring Cloud Config 客户端依赖-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
